syntax = "proto3";
package osmosis.incentives;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "osmosis/incentives/params.proto";
import "osmosis/incentives/gauge.proto";

option go_package = "github.com/osmosis-labs/osmosis/x/incentives/types";

// GenesisState defines the incentives module's genesis state.
message GenesisState {
  // params defines all the parameters of the module
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Gauge gauges = 2 [ (gogoproto.nullable) = false ];
  repeated google.protobuf.Duration lockable_durations = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"lockable_durations\""
  ];
  repeated GenesisReward genesis_reward = 4 [ (gogoproto.nullable) = false ];
  repeated PeriodLockReward period_lock_reward = 5
      [ (gogoproto.nullable) = false ];
}

message GenesisReward {
  CurrentReward current_reward = 1 [ (gogoproto.nullable) = false ];
  repeated HistoricalReward historical_reward = 2
      [ (gogoproto.nullable) = false ];
}
